fixed sidebar alignment with breadcrumbs on

--- a/sass/_other.scss
+++ b/sass/_other.scss
@@ -90,7 +90,8 @@
     padding: $baseline-height * 2 7.407% 0;
 
     /* remove margin top on sidebar (and main which didn't have any anyway)*/
-    ~ div {
+    ~ div,
+    ~ aside {
       margin-top: 0;
     }
   }
